# butsuri

./: CMakeLists.txt
include/: baseDrawable.h  camera.h  chunk.h  chunkManager.h  cube.h  skybox.h  time.h  triangle.h  window.h
shaders/: cubeMap.vert  fragmentShader.frag  skybox.frag  skybox.vert  vertexShader.vert
src/: baseDrawable.cpp  camera.cpp  chunk.cpp  chunkManager.cpp  cube.cpp  glad.c  main.cpp  skybox.cpp  time.cpp  triangle.cpp  window.cpp  window.h
